--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1>About Me</h1>
         <div class="section">
             <h2>Introduction</h2>
-            <p>Hello! My name is Devendra Jaiswal, and I am a beginner-level coder currently pursuing a Bachelor of Computer Applications (BCA) from Integral University in Lucknow. I completed my intermediate studies in 2023 and have since been dedicated to advancing my skills in the field of computer application.</p>
+            <p>Hello! My name is Devendra Jaiswal, and I am a beginner-level coder currently pursuing a Bachelor of Computer Applications (BCA) from Integral University in Lucknow. I completed my intermediate studies in 2023 and have since been dedicated to advancing my skills in the field of computer application</p>
         </div>
         <div class="section">
             <h2>Education</h2>
