Added shadow at image and scroller at the text

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 </head>
 <body>
     <div class="container">
-        <h1><img src="photo-modified.png" alt="my pic" height="80"></h1>
+        <h1><img class="image" src="photo-modified.png" alt="my pic" height="80"></h1>
         <h1>About Me</h1>
         <div class="section">
             <h2>Introduction</h2>
-            <p>Hello! My name is Devendra Jaiswal, and I am a beginner-level coder currently pursuing a Bachelor of Computer Applications (BCA) from Integral University in Lucknow. I completed my intermediate studies in 2023 and have since been dedicated to advancing my skills in the field of computer application.</p>
+            <p>Hello! My name is Devendra Jaiswal, and I am a beginner-level coder currently pursuing a Bachelor of Computer Applications (BCA) from Integral University in Lucknow. I completed my intermediate studies in 2023 and have since been dedicated to advancing my skills in the field of computer application</p>
         </div>
         <div class="section">
             <h2>Education</h2>
@@ -25,10 +25,15 @@
         </div>
         <div class="section">
             <h2>Skills</h2>
-            <ul>
-                <li>Basic programming languages (e.g., Python, Java)</li>
+            <ul class="scroll">
+                <li>Basic programming languages </li>
+                <li>Java</li>
+                <li>Python</li>
+                <li>C</li>
                 <li>Problem-solving</li>
-                <li>Web development (HTML, CSS)</li>
+                <li>Web development (Beginner-level)</li>
+                <li>HTML</li>
+                <li>CSS</li>
                 <li>Project participation and coding challenges</li>
             </ul>
         </div>
